--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 <body>
   <!-- Cabeçalho -->
   <header class="topbar">
-  <div class="brand">
-    <a href="index.html">
-      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-    </a>
-  </div>
+    <div class="brand">
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
+    </div>
 
-  <!-- Botão hambúrguer (fora da nav) -->
-  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+    <!-- Botão mobile -->
+    <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
 
-  <nav class="menu" aria-label="Navegação principal">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-  </nav>
-</header>
+    <!-- Menu -->
+    <nav class="menu" aria-label="Navegação principal">
+      <a href="index.html" class="active">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="galeria.html">Galeria</a>
+      <a href="contactos.html">Contactos</a>
+    </nav>
+  </header>
 
   <!-- Hero -->
   <section class="hero">
@@ -66,7 +67,7 @@
     <div class="container">
       <h2 class="titulo-testemunhos">Testemunhos</h2>
 
-      <!-- Avaliações Airbnb -->
+      <!-- Airbnb -->
       <p style="text-align:center; margin-top:-6px;">
         <a href="https://www.airbnb.pt/rooms/875560493639889462" target="_blank" rel="noopener"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
@@ -74,16 +75,15 @@
         </a>
       </p>
 
-      <!-- Avaliações Booking -->
+      <!-- Booking -->
       <p style="text-align:center; margin-top:4px;">
-        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html"
-           target="_blank" rel="noopener"
+        <a href="https://www.booking.com/hotel/pt/quinta-dos-avos-lourenco.pt-pt.html" target="_blank" rel="noopener"
            style="display:inline-block; padding:6px 10px; border:1px solid #eee; border-radius:999px; font-size:14px; color:#222;">
           ⭐ <span style="color:#003580;">9,8/10</span> · Booking.com
         </a>
       </p>
 
-      <!-- Slider de testemunhos -->
+      <!-- Slider (slides injetados pelo JS) -->
       <div class="testemunhos-slider">
         <div class="dots"></div>
       </div>
@@ -95,16 +95,12 @@
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- Botão flutuante WhatsApp -->
+  <!-- WhatsApp flutuante -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float"
-     target="_blank"
-     rel="noopener"
-     aria-label="Enviar mensagem no WhatsApp">
+     class="whatsapp-float" target="_blank" rel="noopener" aria-label="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
