--- a/sobre.html
+++ b/sobre.html
@@ -8,74 +8,55 @@
 </head>
 
 <body>
-  <!-- Cabeçalho -->
- <header class="topbar">
-  <div class="brand">
-    <a href="index.html">
-      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-    </a>
-  </div>
+  <header class="topbar">
+    <div class="brand">
+      <a href="index.html"><img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+    </div>
+    <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+    <nav class="menu" aria-label="Navegação principal">
+      <a href="index.html">Início</a>
+      <a href="sobre.html" class="active">Sobre</a>
+      <a href="galeria.html">Galeria</a>
+      <a href="contactos.html">Contactos</a>
+    </nav>
+  </header>
 
-  <!-- Botão hambúrguer (fora da nav) -->
-  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-
-  <nav class="menu" aria-label="Navegação principal">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-  </nav>
-</header>
-
-  <!-- Conteúdo -->
   <main class="section">
     <div class="container" style="max-width:800px; text-align:center;">
       <h1>Sobre a Quinta dos Avós Lourenço</h1>
-
       <p>
-        A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história, 
-        localizado no concelho da Sertã.  
-        É o refúgio ideal para quem procura tranquilidade, conforto e um contacto direto com a natureza.
+        A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história,
+        localizado na freguesia de Cernache do Bonjardim, concelho da Sertã. É o refúgio ideal para quem procura
+        tranquilidade, conforto e um contacto direto com a natureza.
       </p>
-
       <p>
-        A casa foi cuidadosamente restaurada, preservando o charme rústico original, 
-        mas adaptando-se às comodidades modernas — oferecendo uma experiência autêntica e acolhedora.
+        A casa foi cuidadosamente restaurada, preservando o charme rústico original, mas adaptando-se às comodidades
+        modernas — oferecendo uma experiência autêntica e acolhedora.
       </p>
-
       <p>
-        Rodeada por três hectares de oliveiras, árvores de fruto, animais e trilhos naturais, 
-        a Quinta proporciona uma imersão completa na vida rural, com a serenidade e o encanto de outros tempos.
+        Rodeada por três hectares de oliveiras, árvores de fruto, animais e trilhos naturais, a Quinta proporciona
+        uma imersão completa na vida rural, com a serenidade e o encanto de outros tempos.
       </p>
-
       <p>
-        O espaço é ideal para famílias, casais e amantes da natureza que procuram descansar, 
-        reconectar-se e desfrutar do silêncio e da paisagem da Beira Interior.
+        O espaço é ideal para famílias, casais e amantes da natureza que procuram descansar, reconectar-se e desfrutar
+        do silêncio e da paisagem da Beira Interior.
       </p>
-
       <p>
-        Mais do que um alojamento, a Quinta dos Avós Lourenço é um lugar de memórias, 
-        partilhas e histórias — onde cada recanto reflete o carinho e a dedicação de gerações.
+        Mais do que um alojamento, a Quinta dos Avós Lourenço é um lugar de memórias, partilhas e histórias —
+        onde cada recanto reflete o carinho e a dedicação de gerações.
       </p>
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- Botão flutuante WhatsApp -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float"
-     target="_blank"
-     rel="noopener"
-     aria-label="Enviar mensagem no WhatsApp">
+     class="whatsapp-float" target="_blank" rel="noopener" aria-label="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
-
