--- a/galeria.html
+++ b/galeria.html
@@ -8,26 +8,19 @@
 </head>
 
 <body>
-  <!-- Cabeçalho -->
- <header class="topbar">
-  <div class="brand">
-    <a href="index.html">
-      <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-    </a>
-  </div>
+  <header class="topbar">
+    <div class="brand">
+      <a href="index.html"><img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+    </div>
+    <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
+    <nav class="menu" aria-label="Navegação principal">
+      <a href="index.html">Início</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="galeria.html" class="active">Galeria</a>
+      <a href="contactos.html">Contactos</a>
+    </nav>
+  </header>
 
-  <!-- Botão hambúrguer (fora da nav) -->
-  <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
-
-  <nav class="menu" aria-label="Navegação principal">
-    <a href="index.html">Início</a>
-    <a href="sobre.html">Sobre</a>
-    <a href="galeria.html">Galeria</a>
-    <a href="contactos.html">Contactos</a>
-  </nav>
-</header>
-
-  <!-- Conteúdo -->
   <main class="section">
     <div class="container">
       <h1>Galeria</h1>
@@ -47,21 +40,15 @@
     </div>
   </main>
 
-  <!-- Rodapé -->
   <footer class="footer">
     <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
   </footer>
 
-  <!-- Botão flutuante WhatsApp -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float"
-     target="_blank"
-     rel="noopener"
-     aria-label="Enviar mensagem no WhatsApp">
+     class="whatsapp-float" target="_blank" rel="noopener" aria-label="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- JavaScript -->
   <script src="js/app.js"></script>
 </body>
 </html>
