--- a/sobre.html
+++ b/sobre.html
@@ -4,13 +4,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sobre · Quinta dos Avós Lourenço</title>
+  <meta name="description" content="Conheça a história e o espírito da Quinta dos Avós Lourenço.">
+
+  <meta http-equiv="Content-Security-Policy"
+        content="
+          default-src 'self';
+          script-src 'self';
+          style-src  'self' 'unsafe-inline';
+          img-src    'self' data:;
+          font-src   'self' data:;
+          connect-src 'self';
+          base-uri   'self';
+          form-action 'self';
+          upgrade-insecure-requests;
+        ">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <header class="topbar">
     <div class="brand">
-      <a href="index.html"><img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
@@ -22,43 +39,29 @@
   </header>
 
   <main class="section">
-    <div class="container" style="max-width:800px; text-align:center;">
-      <h1>Sobre a Quinta dos Avós Lourenço</h1>
-      <p>
-        A <strong>Quinta dos Avós Lourenço</strong> é um alojamento rural com mais de um século de história,
-        localizado na freguesia de Cernache do Bonjardim, concelho da Sertã. É o refúgio ideal para quem procura
-        tranquilidade, conforto e um contacto direto com a natureza.
-      </p>
-      <p>
-        A casa foi cuidadosamente restaurada, preservando o charme rústico original, mas adaptando-se às comodidades
-        modernas — oferecendo uma experiência autêntica e acolhedora.
-      </p>
-      <p>
-        Rodeada por três hectares de oliveiras, árvores de fruto, animais e trilhos naturais, a Quinta proporciona
-        uma imersão completa na vida rural, com a serenidade e o encanto de outros tempos.
-      </p>
-      <p>
-        O espaço é ideal para famílias, casais e amantes da natureza que procuram descansar, reconectar-se e desfrutar
-        do silêncio e da paisagem da Beira Interior.
-      </p>
-      <p>
-        Mais do que um alojamento, a Quinta dos Avós Lourenço é um lugar de memórias, partilhas e histórias —
-        onde cada recanto reflete o carinho e a dedicação de gerações.
-      </p>
+    <div class="container">
+      <h1>Sobre a Quinta</h1>
+      <p>Desde 1853, a Quinta dos Avós Lourenço preserva a tradição e a calma da Sertã. 
+         Aqui podes colocar o texto e as fotos que já tinhas nesta página.</p>
+      <!-- Coloca aqui o teu conteúdo original da página "Sobre" -->
     </div>
   </main>
 
   <footer class="footer">
-  <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
-     <a href="politica-privacidade.html">Política de Privacidade</a>
-  </p>
-</footer>
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
+       <a href="politica-privacidade.html">Política de Privacidade</a>
+    </p>
+  </footer>
 
-  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float" target="_blank" rel="noopener" aria-label="Enviar mensagem no WhatsApp">
-    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
-  </a>
+  <!-- Banner de cookies -->
+  <div id="cookie-banner" class="cookie-banner" role="dialog" aria-label="Aviso de cookies">
+    <p>Usamos cookies apenas para garantir o bom funcionamento do site.
+       <a href="politica-privacidade.html">Saiba mais</a></p>
+    <button id="accept-cookies" type="button">Aceitar</button>
+  </div>
 
-  <script src="js/app.js"></script>
+  <script defer src="js/cookies.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
 </html>
+
