--- a/galeria.html
+++ b/galeria.html
@@ -4,13 +4,30 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galeria · Quinta dos Avós Lourenço</title>
+  <meta name="description" content="Fotografias da Quinta dos Avós Lourenço e envolvente.">
+
+  <meta http-equiv="Content-Security-Policy"
+        content="
+          default-src 'self';
+          script-src 'self';
+          style-src  'self' 'unsafe-inline';
+          img-src    'self' data:;
+          font-src   'self' data:;
+          connect-src 'self';
+          base-uri   'self';
+          form-action 'self';
+          upgrade-insecure-requests;
+        ">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+
   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
   <header class="topbar">
     <div class="brand">
-      <a href="index.html"><img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
+      <a href="index.html">
+        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
+      </a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
@@ -24,31 +41,35 @@
   <main class="section">
     <div class="container">
       <h1>Galeria</h1>
-      <p style="text-align:center;">Alguns momentos e detalhes da Quinta dos Avós Lourenço:</p>
+      <p>Explora imagens da casa, dos quartos e dos espaços exteriores.</p>
 
-      <div class="gallery">
+      <!-- Exemplo de grelha de imagens; substitui pelos teus ficheiros -->
+      <div class="grid gallery">
         <img src="images/foto1.jpg" alt="Vista da quinta">
-        <img src="images/foto2.jpg" alt="Quarto principal">
-        <img src="images/foto3.jpg" alt="Área exterior">
-        <img src="images/foto4.jpg" alt="Detalhes rústicos">
-        <img src="images/foto5.jpg" alt="Piscina e oliveiras">
-        <img src="images/foto6.jpg" alt="Entrada principal">
-        <img src="images/foto7.jpg" alt="Animais da quinta">
-        <img src="images/foto8.jpg" alt="Pôr do sol na quinta">
-        <img src="images/foto9.jpg" alt="Vista panorâmica">
+        <img src="images/foto2.jpg" alt="Quarto">
+        <img src="images/foto3.jpg" alt="Sala">
+        <img src="images/foto4.jpg" alt="Olival">
       </div>
+
+      <!-- Coloca aqui o teu conteúdo original da página "Galeria" -->
     </div>
   </main>
 
   <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · Marca Nacional Nº 694765</p>
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
+       <a href="politica-privacidade.html">Política de Privacidade</a>
+    </p>
   </footer>
 
-  <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
-     class="whatsapp-float" target="_blank" rel="noopener" aria-label="Enviar mensagem no WhatsApp">
-    <img src="images/whatsapp-icon.svg" alt="WhatsApp">
-  </a>
+  <!-- Banner de cookies -->
+  <div id="cookie-banner" class="cookie-banner" role="dialog" aria-label="Aviso de cookies">
+    <p>Usamos cookies apenas para garantir o bom funcionamento do site.
+       <a href="politica-privacidade.html">Saiba mais</a></p>
+    <button id="accept-cookies" type="button">Aceitar</button>
+  </div>
 
-  <script src="js/app.js"></script>
+  <script defer src="js/cookies.js"></script>
+  <script defer src="js/app.js"></script>
 </body>
 </html>
+
