--- a/contactos.html
+++ b/contactos.html
@@ -6,6 +6,7 @@
   <title>Contactos · Quinta dos Avós Lourenço</title>
   <meta name="description" content="Contacte a Quinta dos Avós Lourenço para informações e reservas.">
 
+  <!-- ✅ Políticas de segurança -->
   <meta http-equiv="Content-Security-Policy"
         content="
           default-src 'self';
@@ -16,18 +17,18 @@
           connect-src 'self';
           base-uri   'self';
           form-action 'self';
+          frame-src  'self' https://www.google.com;
           upgrade-insecure-requests;
         ">
   <meta name="referrer" content="strict-origin-when-cross-origin">
 
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="topbar">
     <div class="brand">
-      <a href="index.html">
-        <img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo">
-      </a>
+      <a href="index.html"><img src="images/logo.png" alt="Quinta dos Avós Lourenço" class="logo"></a>
     </div>
     <button class="menu-toggle" aria-expanded="false" aria-label="Abrir menu">☰</button>
     <nav class="menu" aria-label="Navegação principal">
@@ -41,38 +42,53 @@
   <main class="section">
     <div class="container">
       <h1>Contactos</h1>
+      <p>Se tiver alguma questão ou interesse, contacte-nos pelos seguintes meios:</p>
 
-      <div class="grid">
-        <div>
-          <p><strong>Email:</strong> <a href="mailto:SEU_EMAIL">SEU_EMAIL</a></p>
-          <p><strong>Telefone/WhatsApp:</strong> <a href="https://wa.me/351960446713" target="_blank" rel="noopener noreferrer">+351 960 446 713</a></p>
-          <p><strong>Localização:</strong> Sertã, Portugal</p>
-          <!-- Coloca aqui o teu conteúdo original (formulário, morada detalhada, etc.) -->
-        </div>
-        <!-- Se tiveres um mapa embebido, avisa para ajustarmos a CSP -->
+      <p>
+        Rua Cascalheira Nº371<br>
+        6100-421 Azinheira, Sertã<br>
+        GPS: <a href="https://maps.app.goo.gl/9ZXXdmu7sS2fHf8T7" target="_blank" rel="noopener noreferrer">39.738794, -8.107801</a><br>
+        Email: <a href="mailto:alquintaavoslourenco@gmail.com">alquintaavoslourenco@gmail.com</a><br>
+        Telefone: <a href="tel:+351960446713">+351 960 446 713</a>
+        <span class="note">"Chamada para rede móvel nacional"</span>
+      </p>
+
+      <p style="margin-top:20px; display:flex; flex-wrap:wrap; gap:10px; justify-content:center;">
+        <a class="btn primary"
+           href="https://www.google.com/maps/dir/?api=1&destination=39.7387811,-8.107531&travelmode=driving"
+           target="_blank" rel="noopener noreferrer">📍 Obter direções</a>
+      </p>
+
+      <div style="margin-top:30px; display:flex; justify-content:center;">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29912.05533819686!2d-8.107531!3d39.7387811!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1869278e539d21%3A0xac183f67c1c902d0!2sQuinta%20Dos%20Av%C3%B3s%20Louren%C3%A7o!5e0!3m2!1spt-PT!2spt!4v1696862400000!5m2!1spt-PT!2spt"
+          width="100%" height="400" style="border:0; border-radius:10px; max-width:900px;" allowfullscreen
+          loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </div>
   </main>
 
-  <footer class="footer">
-    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL · 
-       <a href="politica-privacidade.html">Política de Privacidade</a>
-    </p>
-  </footer>
-
-  <!-- WhatsApp flutuante (se quiseres igual ao index) -->
+  <!-- WhatsApp flutuante -->
   <a href="https://wa.me/351960446713?text=Olá!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço."
      class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp">
     <img src="images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
-  <!-- Banner de cookies -->
+  <footer class="footer">
+    <p>© 2023–2025 Quinta dos Avós Lourenço · 135447/AL ·
+       <a href="politica-privacidade.html">Política de Privacidade</a>
+    </p>
+  </footer>
+
+  <!-- ✅ Banner de cookies -->
   <div id="cookie-banner" class="cookie-banner" role="dialog" aria-label="Aviso de cookies">
     <p>Usamos cookies apenas para garantir o bom funcionamento do site.
        <a href="politica-privacidade.html">Saiba mais</a></p>
     <button id="accept-cookies" type="button">Aceitar</button>
   </div>
 
+  <!-- Scripts -->
   <script defer src="js/cookies.js"></script>
   <script defer src="js/app.js"></script>
 </body>
