--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -45,9 +45,9 @@
     <h2>1. Quem somos</h2>
     <p><strong>Quinta dos Avós Lourenço</strong> — Alojamento local (AL nº 135447/AL) na Sertã, Portugal.</p>
     <p>Contactos do responsável pelo tratamento de dados (Responsável/Encarregado):<br>
-      Email: <a href="mailto:SEU_EMAIL">SEU_EMAIL</a><br>
+      Email: <a href="mailto:SEU_EMAIL">alquintaavoslourenco@gmail.com</a><br>
       Telefone/WhatsApp: <a href="https://wa.me/351960446713" target="_blank" rel="noopener noreferrer">+351 960 446 713</a><br>
-      Morada: SEU_ENDERECO_POSTAL, Sertã, Portugal
+      Morada: Rua da Cascalheira, Sertã, Portugal
     </p>
 
     <h2>2. Que dados pessoais recolhemos e porquê</h2>
@@ -92,7 +92,7 @@
 
     <h2>7. Os seus direitos</h2>
     <p>Ao abrigo do RGPD, tem os direitos de <strong>acesso</strong>, <strong>retificação</strong>, <strong>eliminação</strong>, <strong>limitação</strong>, <strong>oposição</strong> e <strong>portabilidade</strong> (quando aplicável). Também pode retirar o consentimento quando o tratamento se basear nele.</p>
-    <p>Para exercer os seus direitos, contacte: <a href="mailto:SEU_EMAIL">SEU_</a>. Tem ainda o direito de apresentar reclamação à <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.</p>
+    <p>Para exercer os seus direitos, contacte: <a href="mailto:SEU_EMAIL">alquintaavoslourenco@gmail.com</a>. Tem ainda o direito de apresentar reclamação à <a href="https://www.cnpd.pt/" target="_blank" rel="noopener noreferrer">CNPD</a>.</p>
 
     <h2>8. Segurança</h2>
     <p>Aplicamos medidas técnicas e organizativas adequadas para proteger os dados pessoais, incluindo utilização de HTTPS, políticas de segurança no navegador (CSP) e princípio da minimização de dados.</p>
@@ -107,7 +107,7 @@
     <p>Poderemos atualizar esta política para refletir mudanças legais ou operacionais. A versão publicada no site indica sempre a data da última atualização.</p>
 
     <hr>
-    <p>Se tiver dúvidas sobre esta política, contacte-nos: <a href="mailto:SEU_EMAIL">SEU_EMAIL</a>.</p>
+    <p>Se tiver dúvidas sobre esta política, contacte-nos: <a href="mailto:SEU_EMAIL">alquintaavoslourenco@gmail.com</a>.</p>
   </main>
 
   <footer class="footer">
