--- a/reservas/index.html
+++ b/reservas/index.html
@@ -8,8 +8,6 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://quintadosavoslourenco.pt/reservas/">
   <meta name="referrer" content="strict-origin-when-cross-origin">
-
-  <!-- CSP igual ao site, com permissões para Formspree -->
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self';
@@ -22,16 +20,14 @@
     upgrade-insecure-requests;
   ">
 
-  <!-- OG básicos -->
   <meta property="og:title" content="Reservas · Quinta dos Avós Lourenço">
   <meta property="og:description" content="Faça o seu pedido de reserva na Quinta dos Avós Lourenço, alojamento rural na Sertã.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://quintadosavoslourenco.pt/reservas/">
 
-  <!-- CSS principal -->
   <link rel="stylesheet" href="/css/style.css">
 
-  <!-- Estilos apenas para o simulador (não mexem no resto do site) -->
+  <!-- Estilos só do simulador -->
   <style>
     .simulador{background:#fff;border:1px solid #e5e7eb;border-radius:14px;padding:16px;box-shadow:0 6px 16px rgba(0,0,0,.06);margin:24px 0}
     .sim-grid{display:grid;grid-template-columns:1fr 1fr;gap:12px}
@@ -58,7 +54,7 @@
     input[type="date"].round-field{height:52px}
     input[type="date"]::-webkit-date-and-time-value{text-align:left}
 
-    /* Spinners: maiores e alinhados dentro da caixa (mobile e desktop) */
+    /* Spinners dentro da caixa */
     .with-spinner{position:relative}
     .with-spinner .spinner{
       position:absolute; right:8px; top:6px; bottom:6px;
@@ -100,7 +96,6 @@
             <input id="checkout" name="checkout" type="date" class="round-field">
           </div>
 
-          <!-- Adultos com setas e sem teclado -->
           <div class="with-spinner">
             <label for="adultos">Adultos</label>
             <input id="adultos" name="adultos" type="number" min="1" max="7" value="2"
@@ -111,7 +106,6 @@
             </div>
           </div>
 
-          <!-- Crianças 0–4 com setas e sem teclado -->
           <div class="with-spinner">
             <label for="criancas">Crianças (0–4 anos)</label>
             <input id="criancas" name="criancas" type="number" min="0" max="6" value="0"
@@ -123,22 +117,21 @@
           </div>
 
           <div>
-            <label for="nome">Nome completo</label>
-            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Lourenço" class="round-field">
+            <label for="nome">Nome completo *</label>
+            <input id="nome" name="nome" type="text" autocomplete="name" placeholder="Ex.: Maria Silva" class="round-field" required>
           </div>
           <div>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@gmail.com" class="round-field">
+            <label for="email">Email *</label>
+            <input id="email" name="email" type="email" autocomplete="email" placeholder="exemplo@dominio.pt" class="round-field" required>
           </div>
           <div>
-            <label for="telefone">Telefone</label>
-            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …" class="round-field">
+            <label for="telefone">Telefone *</label>
+            <input id="telefone" name="telefone" type="tel" inputmode="tel" placeholder="+351 …" class="round-field" required>
           </div>
           <div>
             <label for="alojamento">Tipo de alojamento</label>
             <select id="alojamento" name="alojamento" class="round-field">
               <option selected>Casa completa</option>
-              <option selected>...</option>
             </select>
           </div>
         </div>
@@ -200,7 +193,7 @@
     </p>
   </footer>
 
-  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos%20Avós%20Lourenço." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
+  <a href="https://wa.me/351960446713?text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20Quinta%20dos Avós Lourenço." class="whatsapp-float" target="_blank" rel="noopener noreferrer" aria-label="Enviar mensagem no WhatsApp" title="Enviar mensagem no WhatsApp">
     <img src="/images/whatsapp-icon.svg" alt="WhatsApp">
   </a>
 
@@ -211,7 +204,6 @@
     </div>
   </div>
 
-  <!-- Scripts -->
   <script defer src="/js/cookies.js"></script>
   <script defer src="/js/app.js"></script>
   <script defer src="/js/reservas.js"></script>
